--- a/applications.html
+++ b/applications.html
@@ -7,6 +7,9 @@
     <link rel="icon" type="image/x-icon" href="/images/favicon_io/favicon.ico">
     <title>UP AMPLI</title>
     <style>
+        div.announcements{
+            display: flex;
+        }
     </style>
 </head>
 <body>
