--- a/applications.html
+++ b/applications.html
@@ -15,11 +15,11 @@
 <body>
     <header>
         <nav>
-          <img class="logo" src="/images/UP AMPLI.png" height="100%">
-          <a id="homepage-link"href="\homepage.html">Home</a>
-          <a id="applications-link" href="\applications.html">Applications</a>
-          <a id="activities-link" href="\activities.html">Activities</a>
-          <a id="aboutus-link" href="\about-us.html">About Us</a>
+          <img class="logo" src="images/UP AMPLI.png" height="100%">
+          <a id="homepage-link"href="homepage.html">Home</a>
+          <a id="applications-link" href="applications.html">Applications</a>
+          <a id="activities-link" href="activities.html">Activities</a>
+          <a id="aboutus-link" href="about-us.html">About Us</a>
         </nav>
     </header>
         <div>
