--- a/applications.html
+++ b/applications.html
@@ -15,7 +15,7 @@
 <body>
     <header>
         <nav>
-          <img class="logo" src="images/UP AMPLI.png" height="100%">
+          <img class="logo" src="images/UP AMPLI.png" alt="UP AMPLI Logo" height="100%">
           <a id="homepage-link"href="homepage.html">Home</a>
           <a id="applications-link" href="applications.html">Applications</a>
           <a id="activities-link" href="activities.html">Activities</a>
@@ -23,7 +23,7 @@
         </nav>
     </header>
         <div>
-            <img id="cover" src="/images/ampli-cover.png">
+            <img id="cover" src="/images/ampli-cover.png" alt="UP AMPLI Cover">
         </div>
         <main>
       </main>
@@ -33,7 +33,7 @@
                 <center>
                 <img class="logo" src="/images/UP AMPLI.png" height="100%">
                 <h2>UP Mindanao AMPLI</h2>
-                <p>Admin Building, UP Mindanao Campus, Oblation Circle, Mintal, Davao City, Philippines</p
+                <p>Admin Building, UP Mindanao Campus, Oblation Circle, Mintal, Davao City, Philippines</p>
                 </center>
             </div>
             <div class="social-media">
