--- a/applications.html
+++ b/applications.html
@@ -31,28 +31,29 @@
         <div id="wrapper">
             <div class="organization">
                 <center>
-                <img class="logo" src="https://rmrizal-up.github.io/UPAMPLI-Website/images/UP AMPLI.png" height="100%">
+                <img class="logo" src="/images/UP AMPLI.png" height="100%">
                 <h2>UP Mindanao AMPLI</h2>
-                <p>Admin Building, UP Mindanao Campus, Oblation Circle, Mintal, Davao City, Philippines</p>
+                <p>Admin Building, UP Mindanao Campus, Oblation Circle, Mintal, Davao City, Philippines</p
                 </center>
             </div>
             <div class="social-media">
                 <center>
                 <h2>Follow Us</h2>
                 <ul>
-                    <li><a href="https://www.facebook.com/upmindanaoampli">Facebook</a></li>
-                    <li><a href="https://www.instagram.com/upminampli">Instagram</a></li>
-                    <li><a href="https://www.tiktok.com/@upminampli">TikTok</a></li>
+                    <li><a href="https://www.facebook.com/upmindanaoampli"><img id="social-media" src="https://rmrizal-up.github.io/UPAMPLI-Website/images/icons/facebook.png"></a></li>
+                    <li><a href="https://www.instagram.com/upminampli"><img id="social-media" src="https://rmrizal-up.github.io/UPAMPLI-Website/images/icons/instagram.png"></a></li>
+                    <li><a href="https://www.tiktok.com/@upminampli"><img id="social-media" src="https://rmrizal-up.github.io/UPAMPLI-Website/images/icons/tiktok.png"></a></li>
                 </ul>
                 </center>
             </div>
             <div class="contact-devs">
                 <center>
                 <h2>Contact Developers</h2>
-                <p><a href="mailto:rcrizal@up.edu.ph">rcrizal@up.edu.ph</a>/<a href="mailto:sstria@up.edu.ph">sstria@up.edu.ph</a></p>
-                <p>Phone: <a href="tel:+639159343584">+639159343584</a></p>
+                <p style="text-align:center;"><a href="mailto:rcrizal@up.edu.ph">rcrizal@up.edu.ph</a>/<a href="mailto:sstria@up.edu.ph">sstria@up.edu.ph</a></p>
+                <p style="text-align:center;">Phone: <a href="tel:+639159343584">+639159343584</a></p>
                 </center>
             </div>
+            <p style="text-align:center; position: absolute;">THIS WEBSITE IS FOR THE FINAL PROJECT OF CMSC 3</p>
         </div>
       </footer>
     </body>
