--- a/activities.html
+++ b/activities.html
@@ -37,19 +37,20 @@
                 <center>
                 <h2>Follow Us</h2>
                 <ul>
-                    <li><a href="https://www.facebook.com/upmindanaoampli">Facebook</a></li>
-                    <li><a href="https://www.instagram.com/upminampli">Instagram</a></li>
-                    <li><a href="https://www.tiktok.com/@upminampli">TikTok</a></li>
+                    <li><a href="https://www.facebook.com/upmindanaoampli"><img id="social-media" src="https://rmrizal-up.github.io/UPAMPLI-Website/images/icons/facebook.png"></a></li>
+                    <li><a href="https://www.instagram.com/upminampli"><img id="social-media" src="https://rmrizal-up.github.io/UPAMPLI-Website/images/icons/instagram.png"></a></li>
+                    <li><a href="https://www.tiktok.com/@upminampli"><img id="social-media" src="https://rmrizal-up.github.io/UPAMPLI-Website/images/icons/tiktok.png"></a></li>
                 </ul>
                 </center>
             </div>
             <div class="contact-devs">
                 <center>
                 <h2>Contact Developers</h2>
-                <p><a href="mailto:rcrizal@up.edu.ph">rcrizal@up.edu.ph</a>/<a href="mailto:sstria@up.edu.ph">sstria@up.edu.ph</a></p>
-                <p>Phone: <a href="tel:+639159343584">+639159343584</a></p>
+                <p style="text-align:center;"><a href="mailto:rcrizal@up.edu.ph">rcrizal@up.edu.ph</a>/<a href="mailto:sstria@up.edu.ph">sstria@up.edu.ph</a></p>
+                <p style="text-align:center;">Phone: <a href="tel:+639159343584">+639159343584</a></p>
                 </center>
             </div>
+            <p style="text-align:center; position: absolute;">THIS WEBSITE IS FOR THE FINAL PROJECT OF CMSC 3</p>
         </div>
       </footer>
     </body>
