--- a/about-us.html
+++ b/about-us.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="ampli-style.css">
-    <link rel="icon" type="image/x-icon" href="/images/favicon_io/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="https://rmrizal-up.github.io/UPAMPLI-Website/images/favicon_io/favicon.ico">
     <title>UP AMPLI</title>
     <style>
     </style>
@@ -12,15 +12,15 @@
 <body>
     <header>
         <nav>
-          <img class="logo" src="/images/UP AMPLI.png" height="100%">
-          <a id="homepage-link"href="\homepage.html">Home</a>
-          <a id="applications-link" href="\applications.html">Applications</a>
-          <a id="activities-link" href="\activities.html">Activities</a>
-          <a id="aboutus-link" href="\about-us.html">About Us</a>
+          <img class="logo" src="https://rmrizal-up.github.io/UPAMPLI-Website/images/UP AMPLI.png" height="100%">
+          <a id="homepage-link"href="https://rmrizal-up.github.io/UPAMPLI-Website/homepage.html">Home</a>
+          <a id="applications-link" href="https://rmrizal-up.github.io/UPAMPLI-Website/applications.html">Applications</a>
+          <a id="activities-link" href="https://rmrizal-up.github.io/UPAMPLI-Website/activities.html">Activities</a>
+          <a id="aboutus-link" href="https://rmrizal-up.github.io/UPAMPLI-Website/about-us.html">About Us</a>
         </nav>
     </header>
     <div>
-        <img id="cover" src="/images/ampli-cover.png">
+        <img id="cover" src="https://rmrizal-up.github.io/UPAMPLI-Website/images/ampli-cover.png">
     </div>
         <main>
 
@@ -29,7 +29,7 @@
         <div id="wrapper">
             <div class="organization">
                 <center>
-                <img class="logo" src="/images/UP AMPLI.png" height="100%">
+                <img class="logo" src="https://rmrizal-up.github.io/UPAMPLI-Website/images/UP AMPLI.png" height="100%">
                 <h2>UP Mindanao AMPLI</h2>
                 <p>Admin Building, UP Mindanao Campus, Oblation Circle, Mintal, Davao City, Philippines</p
                 </center>
