--- a/applications.html
+++ b/applications.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="ampli-style.css">
+    <link rel="stylesheet" href="https://rmrizal-up.github.io/UPAMPLI-Website/ampli-style.css">
     <link rel="icon" type="image/x-icon" href="https://rmrizal-up.github.io/UPAMPLI-Website/images/favicon_io/favicon.ico">
     <title>UP AMPLI</title>
     <style>
@@ -31,7 +31,7 @@
         <div id="wrapper">
             <div class="organization">
                 <center>
-                <img class="logo" src="/images/UP AMPLI.png" height="100%">
+                <img class="logo" src="https://rmrizal-up.github.io/UPAMPLI-Website/images/UP AMPLI.png" height="100%">
                 <h2>UP Mindanao AMPLI</h2>
                 <p>Admin Building, UP Mindanao Campus, Oblation Circle, Mintal, Davao City, Philippines</p
                 </center>
