--- a/applications.html
+++ b/applications.html
@@ -33,7 +33,7 @@
                 <center>
                 <img class="logo" src="https://rmrizal-up.github.io/UPAMPLI-Website/images/UP AMPLI.png" height="100%">
                 <h2>UP Mindanao AMPLI</h2>
-                <p>Admin Building, UP Mindanao Campus, Oblation Circle, Mintal, Davao City, Philippines</p
+                <p>Admin Building, HAHAH TEST UP Mindanao Campus, Oblation Circle, Mintal, Davao City, Philippines</p
                 </center>
             </div>
             <div class="social-media">
