--- a/applications.html
+++ b/applications.html
@@ -25,7 +25,29 @@
         <div>
             <img id="cover" src="https://rmrizal-up.github.io/UPAMPLI-Website/images/ampli-cover.png" alt="UP AMPLI Cover">
         </div>
-        <main>
+            <main>
+        <div class="content">
+            <h1>Likhawit 2024 Participation Requirements</h1>
+            <section id="workshops">
+                <h2>Attend at least 3 Workshop Topics:</h2>
+                <ul>
+                    <li>Songwriting</li>
+                    <li>Music Theory</li>
+                    <li>Music Production</li>
+                    <li>Music Publishing</li>
+                </ul>
+            </section>
+
+            <section id="requirements">
+                <h2>If you cannot attend Likhawit:</h2>
+                <ul>
+                    <li>Must be in 1 weekly cover video</li>
+                    <li>Must facilitate in at least 3 events</li>
+                    <li>Must perform 2 times (Workshops, events, etc.)</li>
+                    <li>Must perform an original in <span style="color:red;">Music Fest 2025</span></li>
+                </ul>
+            </section>
+        </div>
       </main>
       <footer>
         <div id="wrapper">
@@ -33,7 +55,7 @@
                 <center>
                 <img class="logo" src="https://rmrizal-up.github.io/UPAMPLI-Website/images/UP AMPLI.png" height="100%">
                 <h2>UP Mindanao AMPLI</h2>
-                <p>Admin Building, HAHAH TEST UP Mindanao Campus, Oblation Circle, Mintal, Davao City, Philippines</p
+                <p>Admin Building, UP Mindanao Campus, Oblation Circle, Mintal, Davao City, Philippines</p
                 </center>
             </div>
             <div class="social-media">
