--- a/applications.html
+++ b/applications.html
@@ -31,20 +31,20 @@
             <section id="workshops">
                 <h2>Attend at least 3 Workshop Topics:</h2>
                 <ul>
-                    <li>Songwriting</li>
-                    <li>Music Theory</li>
-                    <li>Music Production</li>
-                    <li>Music Publishing</li>
+                    <li><b>Songwriting</b></li>
+                    <li><b>Music Theory</b></li>
+                    <li><b>Music Production</b></li>
+                    <li><b>Music Publishing</b></li>
                 </ul>
             </section>
 
             <section id="requirements">
                 <h2>If you cannot attend Likhawit:</h2>
                 <ul>
-                    <li>Must be in 1 weekly cover video</li>
-                    <li>Must facilitate in at least 3 events</li>
-                    <li>Must perform 2 times (Workshops, events, etc.)</li>
-                    <li>Must perform an original in <span style="color:red;">Music Fest 2025</span></li>
+                    <li>Must be in <u>1 weekly cover video</u></li>
+                    <li>Must facilitate in at least <u>3 events</u></li>
+                    <li>Must perform <u>2 times</u> (Workshops, events, etc.)</li>
+                    <li>Must perform an <u>original song</u> in <span style="color:red;">Music Fest 2025</span></li>
                 </ul>
             </section>
         </div>
