--- a/applications.html
+++ b/applications.html
@@ -10,6 +10,7 @@
         div.announcements{
             display: flex;
         }
+        #
     </style>
 </head>
 <body>
@@ -25,7 +26,7 @@
         <div>
             <img id="cover" src="https://rmrizal-up.github.io/UPAMPLI-Website/images/ampli-cover.png" alt="UP AMPLI Cover">
         </div>
-            <main>
+            <main id="main-content">
         <div class="content">
             <h1>Likhawit 2024 Participation Requirements</h1>
             <section id="workshops">
