underline the important parts

--- a/applications.html
+++ b/applications.html
@@ -32,10 +32,10 @@
             <section id="workshops">
                 <h2>Attend at least 3 Workshop Topics:</h2>
                 <ul>
-                    <li><b>Songwriting</b></li>
-                    <li><b>Music Theory</b></li>
-                    <li><b>Music Production</b></li>
-                    <li><b>Music Publishing</b></li>
+                    <li><b><u>Songwriting</u></b></li>
+                    <li><b><u>Music Theory</u></b></li>
+                    <li><b><u>Music Production</u></b></li>
+                    <li><b><u>Music Publishing</u></b></li>
                 </ul>
             </section>
 
