--- a/applications.html
+++ b/applications.html
@@ -28,7 +28,7 @@
         </div>
             <main id="main-content">
         <div class="content">
-            <h1>Likhawit 2024 Participation Requirements</h1>
+            <h1 id="header-for-requirements">Likhawit 2024 Participation Requirements</h1>
             <section id="workshops">
                 <h2>Attend at least 3 Workshop Topics:</h2>
                 <ul>
