--- a/activities.html
+++ b/activities.html
@@ -23,6 +23,7 @@
         <img id="cover" src="https://rmrizal-up.github.io/UPAMPLI-Website/images/ampli-cover.png">
     </div>
         <main>
+            <div class="fb-page" data-href="https://www.facebook.com/share/p/18JP42ewiU/" data-tabs="timeline" data-width="800" data-height="650" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true"></div>
       </main>
       <footer>
         <div id="wrapper">
