--- a/activities.html
+++ b/activities.html
@@ -23,7 +23,7 @@
         <img id="cover" src="https://rmrizal-up.github.io/UPAMPLI-Website/images/ampli-cover.png">
     </div>
         <main>
-            <div class="fb-page" data-href="https://www.facebook.com/share/p/18JP42ewiU/" data-tabs="timeline" data-width="800" data-height="650" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true"></div>
+            <div class="fb-page" data-href="https://www.facebook.com/upmindanaoampli" data-tabs="timeline" data-width="800" data-height="650" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true"></div>
       </main>
       <footer>
         <div id="wrapper">
@@ -51,7 +51,7 @@
                 <p style="text-align:center;">Phone: <a href="tel:+639159343584">+639159343584</a></p>
                 </center>
             </div>
-            <p style="text-align:center; position: absolute;">THIS WEBSITE IS FOR THE FINAL PROJECT OF CMSC 3</p>
+            <p style="text-align:center; position: absolute;">THIS TEST HAHA WEBSITE IS FOR THE FINAL PROJECT OF CMSC 3</p>
         </div>
       </footer>
     </body>
