--- a/activities.html
+++ b/activities.html
@@ -10,6 +10,8 @@
     </style>
 </head>
 <body>
+    <div id="fb-root"></div>
+    <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v21.0"></script>
     <header>
         <nav>
           <img class="logo" src="https://rmrizal-up.github.io/UPAMPLI-Website/images/UP AMPLI.png" height="100%">
