--- a/activities.html
+++ b/activities.html
@@ -66,7 +66,7 @@
                 <p style="text-align:center;">Phone: <a href="tel:+639159343584">+639159343584</a></p>
                 </center>
             </div>
-            <p style="text-align:center; position: absolute;">THIS WEBSITE IS FOR THE FINAL PROJECT OF CMSC 3</p>
+            <p style="text-align:center; position: absolute;">THISS WEBSITE IS FOR THE FINAL PROJECT OF CMSC 3</p>
         </div>
       </footer>
     </body>
