--- a/activities.html
+++ b/activities.html
@@ -32,7 +32,7 @@
                      data-width="1200" 
                      data-height="650" 
                      data-small-header="false" 
-                     data-adapt-container-width="true" 
+                     data-adapt-container-width="false" 
                      data-hide-cover="false" 
                      data-show-facepile="true">
                 </div>
@@ -66,7 +66,7 @@
                 <p style="text-align:center;">Phone: <a href="tel:+639159343584">+639159343584</a></p>
                 </center>
             </div>
-            <p style="text-align:center; position: absolute;">THISS WEBSITE IS FOR THE FINAL PROJECT OF CMSC 3</p>
+            <p style="text-align:center; position: absolute;">THIS WEBSITE IS FOR THE FINAL PROJECT OF CMSC 3</p>
         </div>
       </footer>
     </body>
