--- a/activities.html
+++ b/activities.html
@@ -26,13 +26,14 @@
     </div>
         <main>
             <div class="fb-container">
+                <h2 class="fb-title">Browse the current activities here on our Facebook page!</h2>
                 <div class="fb-page" 
                      data-href="https://www.facebook.com/upmindanaoampli" 
                      data-tabs="timeline" 
                      data-width="1200" 
                      data-height="650" 
                      data-small-header="false" 
-                     data-adapt-container-width="false" 
+                     data-adapt-container-width="true" 
                      data-hide-cover="false" 
                      data-show-facepile="true">
                 </div>
