--- a/activities.html
+++ b/activities.html
@@ -25,7 +25,7 @@
         <img id="cover" src="https://rmrizal-up.github.io/UPAMPLI-Website/images/ampli-cover.png">
     </div>
         <main>
-            <p>Check out our Facebook page for more announcements regarding new activities!</p>
+            <p id = "centered-p">Check out our Facebook page for more announcements regarding new activities!</p>
             <div class="fb-container">
                 <div class="fb-page" 
                      data-href="https://www.facebook.com/upmindanaoampli" 
