--- a/applications.html
+++ b/applications.html
@@ -27,8 +27,9 @@
         </div>
             <main id="main-content">
         <div class="content">
-            <h1 id="header-for-requirements">Likhawit 2024 Participation Requirements</h1>
+            <h1 id="header-for-requirements">Residency Requirements (For New Applicants)</h1>
             <section id="workshops">
+                <h1>Must attend Likhawit 2024</h1>
                 <h2>Attend at least 3 Workshop Topics:</h2>
                 <ul>
                     <li><b><u>Songwriting</u></b></li>
@@ -42,6 +43,9 @@
                 <h2>If you cannot attend Likhawit:</h2>
                 <ul>
                     <li>Must be in <u>1 weekly cover video</u></li>
+                </ul>
+                <h2>Other Requirements:</h2>
+                <ul>
                     <li>Must facilitate in at least <u>3 events</u></li>
                     <li>Must perform <u>2 times</u> (Workshops, events, etc.)</li>
                     <li>Must perform an <u>original song</u> in <span style="color:red;">Music Fest 2025</span></li>
