--- a/applications.html
+++ b/applications.html
@@ -29,7 +29,7 @@
         <div class="content">
             <h1 id="header-for-requirements">Residency Requirements (For New Applicants)</h1>
             <section id="workshops">
-                <h1>Must attend Likhawit 2024</h1>
+                <h2>Must attend <span style="color:green;">Likhawit 2024</span></h2>
                 <h2>Attend at least 3 Workshop Topics:</h2>
                 <ul>
                     <li><b><u>Songwriting</u></b></li>
