--- a/applications.html
+++ b/applications.html
@@ -27,6 +27,11 @@
         </div>
             <main id="main-content">
         <div class="content">
+            <h1 id="header-for-requirements">Application Form</h1>
+            <section id="workshops">
+                <p>Applications for A.Y. 2024-2025 are currently closed.
+                Please check back later for further updates!</p>
+            </section>
             <h1 id="header-for-requirements">Residency Requirements (For New Applicants)</h1>
             <section id="workshops">
                 <h2>Must attend <span style="color:green;">Likhawit 2024</span></h2>
