--- a/applications.html
+++ b/applications.html
@@ -29,8 +29,8 @@
         <div class="content">
             <h1 id="header-for-requirements">Application Form</h1>
             <section id="workshops">
-                <p>Applications for A.Y. 2024-2025 are currently closed.
-                Please check back later for further updates!</p>
+                <h2></h2>Applications for A.Y. 2024-2025 are currently closed.
+                Please check back later for further updates!</h2>
             </section>
             <h1 id="header-for-requirements">Residency Requirements (For New Applicants)</h1>
             <section id="workshops">
