--- a/applications.html
+++ b/applications.html
@@ -29,7 +29,7 @@
         <div class="content">
             <h1 id="header-for-requirements">Application Form</h1>
             <section id="workshops">
-                <h2>Applications for A.Y. 2024-2025 are currently closed.
+                <h2>Applications for A.Y. 2024-2025 are currently closed.<br>
                 Please check back later for further updates!</h2>
             </section>
             <h1 id="header-for-requirements">Residency Requirements (For New Applicants)</h1>
