--- a/about-us.html
+++ b/about-us.html
@@ -3,10 +3,56 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://rmrizal-up.github.io/UPAMPLI-Website/ampli-style.css">
+    <link rel="stylesheet" href="ampli-style.css">
     <link rel="icon" type="image/x-icon" href="https://rmrizal-up.github.io/UPAMPLI-Website/images/favicon_io/favicon.ico">
     <title>UP AMPLI</title>
     <style>
+      .officers img{
+        width: 165px;
+        height: 165px;
+        border-radius: 100px;
+      }
+      h2{
+        font-size: 24px;
+      }
+      h3{
+        font-size: 16px;
+      }
+      main{
+        align-items: center;
+        text-align: center;
+        display: block;
+        margin-right: auto;
+        margin-left: auto;
+    }
+      div.officers{
+        margin: 50px;
+      }
+      .row{
+        display: flex;
+        height: 200px;
+        width: auto;
+        margin: 100px;
+        align-items: center;
+        justify-content: center;
+      }
+      .row div{
+        height: 500px;
+        width: 300px;
+        margin: 10px;
+        align-items: center;
+        align-content: center;
+      }
+      div.title{
+        display: block;
+        margin: auto;
+        align-items: center;
+        height: auto;
+        width: fit-content;
+      }
+      div.title h1{
+        margin:20px;
+      }
     </style>
 </head>
 <body>
@@ -23,8 +69,24 @@
         <img id="cover" src="https://rmrizal-up.github.io/UPAMPLI-Website/images/ampli-cover.png">
     </div>
         <main>
-
-      </main>
+            <div id="content">
+            <center>
+                <h1>Vision</h1>
+                <p>To be the premier music organization at UP Mindanao that inspires and nurtures a vibrant, inclusive, and collaborative community 
+                    of musicians and artists, upholding excellence in music composition and performances while promoting the rich heritage of Filipino 
+                    music within and beyond the university.</p>
+                <h1>Mission</h1>
+                <p>We are dedicated to:</p>
+                    <ul>
+                        <li>Reviving and sustaining the culture of music at UP Mindanao by providing opportunities for musicians, producers, lyricists, and instrumentalists to collaborate and showcase their talents.</li>
+                        <li>Fostering a supportive and inclusive environment where student artists can grow, develop their skills, and form lasting connections through gigs, performances, and workshops.</li>
+                        <li>Promoting and honoring original Filipino music by organizing events and performances that celebrate the diversity and richness of our musical heritage.</li>
+                        <li>Serving as the representative body of the university's music community, working with both the administration and fellow student organizations to elevate the arts at UP Mindanao.</li>
+                    </ul>
+            </center>
+            </div>
+            <script src="officerslist.js"></script>
+        </main>
       <footer>
         <div id="wrapper">
             <div class="organization">
