--- a/about-us.html
+++ b/about-us.html
@@ -4,13 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="ampli-style.css">
-    <link rel="icon" type="image/x-icon" href="https://rmrizal-up.github.io/UPAMPLI-Website/images/favicon_io/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="images/favicon_io/favicon.ico">
     <title>UP AMPLI</title>
     <style>
-      .officers img{
+    .mission{
+        list-style-type: disc;
+        padding-left: 20px; 
+        margin-left: auto; 
+        margin-right: auto;
+        width: 75%;
+        text-align: justify;
+    }
+        .officers img{
         width: 165px;
-        height: 165px;
-        border-radius: 100px;
+        height: auto;
       }
       h2{
         font-size: 24px;
@@ -30,9 +37,9 @@
       }
       .row{
         display: flex;
-        height: 200px;
+        height: 400px;
         width: auto;
-        margin: 100px;
+        margin: 50px;
         align-items: center;
         justify-content: center;
       }
@@ -58,15 +65,15 @@
 <body>
     <header>
         <nav>
-          <img class="logo" src="https://rmrizal-up.github.io/UPAMPLI-Website/images/UP AMPLI.png" height="100%">
-          <a id="homepage-link"href="https://rmrizal-up.github.io/UPAMPLI-Website/homepage.html">Home</a>
-          <a id="applications-link" href="https://rmrizal-up.github.io/UPAMPLI-Website/applications.html">Applications</a>
-          <a id="activities-link" href="https://rmrizal-up.github.io/UPAMPLI-Website/activities.html">Activities</a>
-          <a id="aboutus-link" href="https://rmrizal-up.github.io/UPAMPLI-Website/about-us.html">About Us</a>
+          <img class="logo" src="images/UP AMPLI.png" height="100%">
+          <a id="homepage-link"href="homepage.html">Home</a>
+          <a id="applications-link" href="applications.html">Applications</a>
+          <a id="activities-link" href="activities.html">Activities</a>
+          <a id="aboutus-link" href="about-us.html">About Us</a>
         </nav>
     </header>
     <div>
-        <img id="cover" src="https://rmrizal-up.github.io/UPAMPLI-Website/images/ampli-cover.png">
+        <img id="cover" src="images/ampli-cover.png">
     </div>
         <main>
             <div id="content">
@@ -77,11 +84,11 @@
                     music within and beyond the university.</p>
                 <h1>Mission</h1>
                 <p>We are dedicated to:</p>
-                    <ul>
-                        <li>Reviving and sustaining the culture of music at UP Mindanao by providing opportunities for musicians, producers, lyricists, and instrumentalists to collaborate and showcase their talents.</li>
-                        <li>Fostering a supportive and inclusive environment where student artists can grow, develop their skills, and form lasting connections through gigs, performances, and workshops.</li>
-                        <li>Promoting and honoring original Filipino music by organizing events and performances that celebrate the diversity and richness of our musical heritage.</li>
-                        <li>Serving as the representative body of the university's music community, working with both the administration and fellow student organizations to elevate the arts at UP Mindanao.</li>
+                    <ul class="mission">
+                        <li class="mission">Reviving and sustaining the culture of music at UP Mindanao by providing opportunities for musicians, producers, lyricists, and instrumentalists to collaborate and showcase their talents.</li>
+                        <li class="mission">Fostering a supportive and inclusive environment where student artists can grow, develop their skills, and form lasting connections through gigs, performances, and workshops.</li>
+                        <li class="mission">Promoting and honoring original Filipino music by organizing events and performances that celebrate the diversity and richness of our musical heritage.</li>
+                        <li class="mission">Serving as the representative body of the university's music community, working with both the administration and fellow student organizations to elevate the arts at UP Mindanao.</li>
                     </ul>
             </center>
             </div>
@@ -91,7 +98,7 @@
         <div id="wrapper">
             <div class="organization">
                 <center>
-                <img class="logo" src="https://rmrizal-up.github.io/UPAMPLI-Website/images/UP AMPLI.png" height="100%">
+                <img class="logo" src="images/UP AMPLI.png" height="100%">
                 <h2>UP Mindanao AMPLI</h2>
                 <p>Admin Building, UP Mindanao Campus, Oblation Circle, Mintal, Davao City, Philippines</p
                 </center>
@@ -100,9 +107,9 @@
                 <center>
                 <h2>Follow Us</h2>
                 <ul>
-                    <li><a href="https://www.facebook.com/upmindanaoampli"><img id="social-media" src="https://rmrizal-up.github.io/UPAMPLI-Website/images/icons/facebook.png"></a></li>
-                    <li><a href="https://www.instagram.com/upminampli"><img id="social-media" src="https://rmrizal-up.github.io/UPAMPLI-Website/images/icons/instagram.png"></a></li>
-                    <li><a href="https://www.tiktok.com/@upminampli"><img id="social-media" src="https://rmrizal-up.github.io/UPAMPLI-Website/images/icons/tiktok.png"></a></li>
+                    <li><a href="https://www.facebook.com/upmindanaoampli"><img id="social-media" src="images/icons/facebook.png"></a></li>
+                    <li><a href="https://www.instagram.com/upminampli"><img id="social-media" src="images/icons/instagram.png"></a></li>
+                    <li><a href="https://www.tiktok.com/@upminampli"><img id="social-media" src="images/icons/tiktok.png"></a></li>
                 </ul>
                 </center>
             </div>
