--- a/applications.html
+++ b/applications.html
@@ -3,66 +3,33 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://rmrizal-up.github.io/UPAMPLI-Website/ampli-style.css">
-    <link rel="icon" type="image/x-icon" href="https://rmrizal-up.github.io/UPAMPLI-Website/images/favicon_io/favicon.ico">
+    <link rel="stylesheet" href="ampli-style.css">
+    <link rel="icon" type="image/x-icon" href="images/favicon_io/favicon.ico">
     <title>UP AMPLI</title>
     <style>
-        div.announcements{
-            display: flex;
-        }
     </style>
 </head>
 <body>
     <header>
         <nav>
-          <img class="logo" src="https://rmrizal-up.github.io/UPAMPLI-Website/images/UP AMPLI.png" alt="UP AMPLI Logo" height="100%">
-          <a id="homepage-link" href="https://rmrizal-up.github.io/UPAMPLI-Website/homepage.html">Home</a>
-          <a id="applications-link" href="https://rmrizal-up.github.io/UPAMPLI-Website/applications.html">Applications</a>
-          <a id="activities-link" href="https://rmrizal-up.github.io/UPAMPLI-Website/activities.html">Activities</a>
-          <a id="aboutus-link" href="https://rmrizal-up.github.io/UPAMPLI-Website/about-us.html">About Us</a>
+          <img class="logo" src="images/UP AMPLI.png" height="100%">
+          <a id="homepage-link"href="index.html">Home</a>
+          <a id="applications-link" href="applications.html">Applications</a>
+          <a id="activities-link" href="activities.html">Activities</a>
+          <a id="aboutus-link" href="about-us.html">About Us</a>
         </nav>
     </header>
-        <div>
-            <img id="cover" src="https://rmrizal-up.github.io/UPAMPLI-Website/images/ampli-cover.png" alt="UP AMPLI Cover">
-        </div>
-            <main id="main-content">
-        <div class="content">
-            <h1 id="header-for-requirements">Application Form</h1>
-            <section id="workshops">
-                <h2>Applications for A.Y. 2024-2025 are currently closed.<br>
-                Please check back later for further updates!</h2>
-            </section>
-            <h1 id="header-for-requirements">Residency Requirements (For New Applicants)</h1>
-            <section id="workshops">
-                <h2>Must attend <span style="color:green;">Likhawit 2024</span></h2>
-                <h2>Attend at least 3 Workshop Topics:</h2>
-                <ul>
-                    <li><b><u>Songwriting</u></b></li>
-                    <li><b><u>Music Theory</u></b></li>
-                    <li><b><u>Music Production</u></b></li>
-                    <li><b><u>Music Publishing</u></b></li>
-                </ul>
-            </section>
+    <div>
+        <img id="cover" src="images/ampli-cover.png">
+    </div>
+        <main>
 
-            <section id="requirements">
-                <h2>If you cannot attend Likhawit:</h2>
-                <ul>
-                    <li>Must be in <u>1 weekly cover video</u></li>
-                </ul>
-                <h2>Other Requirements:</h2>
-                <ul>
-                    <li>Must facilitate in at least <u>3 events</u></li>
-                    <li>Must perform <u>2 times</u> (Workshops, events, etc.)</li>
-                    <li>Must perform an <u>original song</u> in <span style="color:red;">Music Fest 2025</span></li>
-                </ul>
-            </section>
-        </div>
       </main>
       <footer>
         <div id="wrapper">
             <div class="organization">
                 <center>
-                <img class="logo" src="https://rmrizal-up.github.io/UPAMPLI-Website/images/UP AMPLI.png" height="100%">
+                <img class="logo" src="images/UP AMPLI.png" height="100%">
                 <h2>UP Mindanao AMPLI</h2>
                 <p>Admin Building, UP Mindanao Campus, Oblation Circle, Mintal, Davao City, Philippines</p
                 </center>
@@ -71,9 +38,9 @@
                 <center>
                 <h2>Follow Us</h2>
                 <ul>
-                    <li><a href="https://www.facebook.com/upmindanaoampli"><img id="social-media" src="https://rmrizal-up.github.io/UPAMPLI-Website/images/icons/facebook.png"></a></li>
-                    <li><a href="https://www.instagram.com/upminampli"><img id="social-media" src="https://rmrizal-up.github.io/UPAMPLI-Website/images/icons/instagram.png"></a></li>
-                    <li><a href="https://www.tiktok.com/@upminampli"><img id="social-media" src="https://rmrizal-up.github.io/UPAMPLI-Website/images/icons/tiktok.png"></a></li>
+                    <li><a href="https://www.facebook.com/upmindanaoampli"><img id="social-media" src="images/icons/facebook.png"></a></li>
+                    <li><a href="https://www.instagram.com/upminampli"><img id="social-media" src="images/icons/instagram.png"></a></li>
+                    <li><a href="https://www.tiktok.com/@upminampli"><img id="social-media" src="images/icons/tiktok.png"></a></li>
                 </ul>
                 </center>
             </div>
