--- a/activities.html
+++ b/activities.html
@@ -4,25 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="ampli-style.css">
-    <link rel="icon" type="image/x-icon" href="https://rmrizal-up.github.io/UPAMPLI-Website/images/favicon_io/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="images/favicon_io/favicon.ico">
     <title>UP AMPLI</title>
     <style>
     </style>
 </head>
 <body>
-    <div id="fb-root"></div>
-    <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v21.0"></script>
     <header>
         <nav>
-          <img class="logo" src="https://rmrizal-up.github.io/UPAMPLI-Website/images/UP AMPLI.png" height="100%">
-          <a id="homepage-link"href="https://rmrizal-up.github.io/UPAMPLI-Website/homepage.html">Home</a>
-          <a id="applications-link" href="https://rmrizal-up.github.io/UPAMPLI-Website/applications.html">Applications</a>
-          <a id="activities-link" href="https://rmrizal-up.github.io/UPAMPLI-Website/activities.html">Activities</a>
-          <a id="aboutus-link" href="https://rmrizal-up.github.io/UPAMPLI-Website/about-us.html">About Us</a>
+          <img class="logo" src="images/UP AMPLI.png" height="100%">
+          <a id="homepage-link"href="homepage.html">Home</a>
+          <a id="applications-link" href="applications.html">Applications</a>
+          <a id="activities-link" href="activities.html">Activities</a>
+          <a id="aboutus-link" href="about-us.html">About Us</a>
         </nav>
     </header>
     <div>
-        <img id="cover" src="https://rmrizal-up.github.io/UPAMPLI-Website/images/ampli-cover.png">
+        <img id="cover" src="images/ampli-cover.png">
     </div>
         <main>
             <p id="centered-p">Check outa our Facebook page for more announcements regarding new activities!</p>
@@ -38,14 +36,12 @@
                      data-show-facepile="true">
                 </div>
             </div>
-            
-            
       </main>
-      <footer>
+    <footer>
         <div id="wrapper">
             <div class="organization">
                 <center>
-                <img class="logo" src="https://rmrizal-up.github.io/UPAMPLI-Website/images/UP AMPLI.png" height="100%">
+                <img class="logo" src="images/UP AMPLI.png" height="100%">
                 <h2>UP Mindanao AMPLI</h2>
                 <p>Admin Building, UP Mindanao Campus, Oblation Circle, Mintal, Davao City, Philippines</p
                 </center>
@@ -54,9 +50,9 @@
                 <center>
                 <h2>Follow Us</h2>
                 <ul>
-                    <li><a href="https://www.facebook.com/upmindanaoampli"><img id="social-media" src="https://rmrizal-up.github.io/UPAMPLI-Website/images/icons/facebook.png"></a></li>
-                    <li><a href="https://www.instagram.com/upminampli"><img id="social-media" src="https://rmrizal-up.github.io/UPAMPLI-Website/images/icons/instagram.png"></a></li>
-                    <li><a href="https://www.tiktok.com/@upminampli"><img id="social-media" src="https://rmrizal-up.github.io/UPAMPLI-Website/images/icons/tiktok.png"></a></li>
+                    <li><a href="https://www.facebook.com/upmindanaoampli"><img id="social-media" src="images/icons/facebook.png"></a></li>
+                    <li><a href="https://www.instagram.com/upminampli"><img id="social-media" src="images/icons/instagram.png"></a></li>
+                    <li><a href="https://www.tiktok.com/@upminampli"><img id="social-media" src="images/icons/tiktok.png"></a></li>
                 </ul>
                 </center>
             </div>
