--- a/applications.html
+++ b/applications.html
@@ -7,23 +7,56 @@
     <link rel="icon" type="image/x-icon" href="images/favicon_io/favicon.ico">
     <title>UP AMPLI</title>
     <style>
+        div.announcements{
+            display: flex;
+        }
     </style>
 </head>
 <body>
     <header>
         <nav>
-          <img class="logo" src="images/UP AMPLI.png" height="100%">
-          <a id="homepage-link"href="index.html">Home</a>
+          <img class="logo" src="images/UP AMPLI.png" alt="UP AMPLI Logo" height="100%">
+          <a id="homepage-link" href="homepage.html">Home</a>
           <a id="applications-link" href="applications.html">Applications</a>
           <a id="activities-link" href="activities.html">Activities</a>
           <a id="aboutus-link" href="about-us.html">About Us</a>
         </nav>
     </header>
-    <div>
-        <img id="cover" src="images/ampli-cover.png">
-    </div>
-        <main>
+        <div>
+            <img id="cover" src="images/ampli-cover.png" alt="UP AMPLI Cover">
+        </div>
+            <main id="main-content">
+        <div class="content">
+            <h1 id="header-for-requirements">Application Form</h1>
+            <section id="workshops">
+                <h2>Applications for A.Y. 2024-2025 are currently closed.<br>
+                Please check back later for further updates!</h2>
+            </section>
+            <h1 id="header-for-requirements">Residency Requirements (For New Applicants)</h1>
+            <section id="workshops">
+                <h2>Must attend <span style="color:green;">Likhawit 2024</span></h2>
+                <h2>Attend at least 3 Workshop Topics:</h2>
+                <ul>
+                    <li><b><u>Songwriting</u></b></li>
+                    <li><b><u>Music Theory</u></b></li>
+                    <li><b><u>Music Production</u></b></li>
+                    <li><b><u>Music Publishing</u></b></li>
+                </ul>
+            </section>
 
+            <section id="requirements">
+                <h2>If you cannot attend Likhawit:</h2>
+                <ul>
+                    <li>Must be in <u>1 weekly cover video</u></li>
+                </ul>
+                <h2>Other Requirements:</h2>
+                <ul>
+                    <li>Must facilitate in at least <u>3 events</u></li>
+                    <li>Must perform <u>2 times</u> (Workshops, events, etc.)</li>
+                    <li>Must perform an <u>original song</u> in <span style="color:red;">Music Fest 2025</span></li>
+                </ul>
+            </section>
+        </div>
       </main>
       <footer>
         <div id="wrapper">
