--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <header>
         <nav>
-          <img class="logo" src="../images/UP AMPLI.png" height="100%">
+          <img class="logo" src="images/UP AMPLI.png" height="100%">
           <a id="homepage-link"href="index.html">Home</a>
           <a id="applications-link" href="applications.html">Applications</a>
           <a id="activities-link" href="activities.html">Activities</a>
