--- a/activities.html
+++ b/activities.html
@@ -7,6 +7,22 @@
     <link rel="icon" type="image/x-icon" href="images/favicon_io/favicon.ico">
     <title>UP AMPLI</title>
     <style>
+        .fb-container {
+            width: 100%;
+            display: flex;
+            justify-content: center;
+            margin: 20px 0;
+        }
+
+        .fb-page {
+            width: 100%;
+            max-width: 1200px; /* Ensures it doesn't exceed a set width */
+        }
+
+        #centered-p {
+            text-align: center;
+            font-size: 1.2em;
+            margin: 20px 0;
     </style>
 </head>
 <body>
@@ -22,21 +38,21 @@
     <div>
         <img id="cover" src="images/ampli-cover.png">
     </div>
-        <main>
-            <p id="centered-p">Check outa our Facebook page for more announcements regarding new activities!</p>
-            <div class="fb-container">
-                <div class="fb-page" 
-                     data-href="https://www.facebook.com/upmindanaoampli" 
-                     data-tabs="timeline" 
-                     data-width="1200" 
-                     data-height="650" 
-                     data-small-header="false" 
-                     data-adapt-container-width="true" 
-                     data-hide-cover="false" 
-                     data-show-facepile="true">
-                </div>
+    <main>
+        <p id="centered-p">Check out our Facebook page for more announcements regarding new activities!</p>
+        <div class="fb-container">
+            <div class="fb-page" 
+                 data-href="https://www.facebook.com/upmindanaoampli" 
+                 data-tabs="timeline" 
+                 data-width="100%" 
+                 data-height="650" 
+                 data-small-header="false" 
+                 data-adapt-container-width="true" 
+                 data-hide-cover="false" 
+                 data-show-facepile="true">
             </div>
-      </main>
+        </div>
+    </main>
     <footer>
         <div id="wrapper">
             <div class="organization">
@@ -66,5 +82,8 @@
             <p style="text-align:center; position: absolute;">THIS WEBSITE IS FOR THE FINAL PROJECT OF CMSC 3</p>
         </div>
       </footer>
+    <script async defer crossorigin="anonymous" 
+        src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v16.0">
+    </script>
     </body>
 </html>
