tried to refresh any mistakes

--- a/activities.html
+++ b/activities.html
@@ -7,6 +7,7 @@
     <link rel="icon" type="image/x-icon" href="images/favicon_io/favicon.ico">
     <title>UP AMPLI</title>
     <style>
+        /* Styling for the Facebook container */
         .fb-container {
             width: 100%;
             display: flex;
@@ -30,14 +31,14 @@
     <header>
         <nav>
           <img class="logo" src="images/UP AMPLI.png" height="100%">
-          <a id="homepage-link"href="index.html">Home</a>
+          <a id="homepage-link" href="index.html">Home</a>
           <a id="applications-link" href="applications.html">Applications</a>
           <a id="activities-link" href="activities.html">Activities</a>
           <a id="aboutus-link" href="about-us.html">About Us</a>
         </nav>
     </header>
     <div>
-        <img id="cover" src="images/ampli-cover.png">
+        <img id="cover" src="images/ampli-cover.png" style="width: 100%; display: block;">
     </div>
     <main>
         <p id="centered-p">Check out our Facebook page for more announcements regarding new activities!</p>
@@ -60,7 +61,7 @@
                 <center>
                 <img class="logo" src="images/UP AMPLI.png" height="100%">
                 <h2>UP Mindanao AMPLI</h2>
-                <p>Admin Building, UP Mindanao Campus, Oblation Circle, Mintal, Davao City, Philippines</p
+                <p>Admin Building, UP Mindanao Campus, Oblation Circle, Mintal, Davao City, Philippines</p>
                 </center>
             </div>
             <div class="social-media">
@@ -82,9 +83,10 @@
             </div>
             <p style="text-align:center; position: absolute;">THIS WEBSITE IS FOR THE FINAL PROJECT OF CMSC 3</p>
         </div>
-      </footer>
+    </footer>
+    <!-- Facebook SDK -->
     <script async defer crossorigin="anonymous" 
         src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v16.0">
     </script>
-    </body>
+</body>
 </html>
