--- a/activities.html
+++ b/activities.html
@@ -41,7 +41,7 @@
         <img id="cover" src="images/ampli-cover.png" style="width: 100%; display: block;">
     </div>
     <main>
-        <p id="centered-p">Check out our Facebook page for more announcements regarding new activities!</p>
+        <p id="centered-p">Check out our TEST Facebook page for more announcements regarding new activities!</p>
         <div class="fb-container">
             <div class="fb-page" 
                  data-href="https://www.facebook.com/upmindanaoampli" 
