--- a/activities.html
+++ b/activities.html
@@ -7,27 +7,31 @@
     <link rel="icon" type="image/x-icon" href="images/favicon_io/favicon.ico">
     <title>UP AMPLI</title>
     <style>
-        /* Styling for the Facebook container */
+        /* Styling for Facebook container and text */
         .fb-container {
             width: 100%;
             display: flex;
-            justify-content: center;
+            flex-direction: column;
+            align-items: center; /* Centers the Facebook plugin horizontally */
             margin: 20px 0;
         }
 
         .fb-page {
-            width: 100%;
-            max-width: 1200px; /* Ensures it doesn't exceed a set width */
+            width: 100%; /* Make it responsive */
+            max-width: 1200px; /* Limit to a reasonable width */
         }
 
         #centered-p {
-            text-align: center;
+            text-align: center; /* Center the text */
             font-size: 1.2em;
-            margin: 20px 0;
+            margin: 20px auto; /* Add space above and below */
+            max-width: 800px; /* Restrict text width for better readability */
         }
     </style>
 </head>
 <body>
+    <div id="fb-root"></div>
+    <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v21.0"></script>
     <header>
         <nav>
           <img class="logo" src="images/UP AMPLI.png" height="100%">
@@ -41,17 +45,22 @@
         <img id="cover" src="images/ampli-cover.png" style="width: 100%; display: block;">
     </div>
     <main>
-        <p id="centered-p">Check out our TEST Facebook page for more announcements regarding new activities!</p>
+        <p id="centered-p">
+            Check out our Facebook page for more announcements regarding new activities!
+        </p>
         <div class="fb-container">
             <div class="fb-page" 
                  data-href="https://www.facebook.com/upmindanaoampli" 
                  data-tabs="timeline" 
                  data-width="100%" 
-                 data-height="650" 
-                 data-small-header="false" 
+                 data-height="900" 
+                 data-small-header="true" 
                  data-adapt-container-width="true" 
                  data-hide-cover="false" 
-                 data-show-facepile="true">
+                 data-show-facepile="false">
+                <blockquote cite="https://www.facebook.com/upmindanaoampli" class="fb-xfbml-parse-ignore">
+                    <a href="https://www.facebook.com/upmindanaoampli">UP Mindanao AMPLI</a>
+                </blockquote>
             </div>
         </div>
     </main>
