--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <header>
         <nav>
-          <img class="logo" src="images/UP AMPLI.png" height="100%">
+          <img class="logo" src="images/UP AMPLI.png">
           <a id="homepage-link"href="index.html">Home</a>
           <a id="applications-link" href="applications.html">Applications</a>
           <a id="activities-link" href="activities.html">Activities</a>
@@ -44,7 +44,7 @@
         </div>
         <h1>DOCUMENTATION</h1>
         <div id="content" class="activities">
-            <div class="container">
+            <div class="container col-s-9 col-12">
                 <div class="mySlides">
                   <div class="numbertext">1 / 10</div>
                   <img class="slideshow" src="images/applicant-orientation/app-orientation-1.jpg">
@@ -106,7 +106,7 @@
         <div id="wrapper">
             <div class="organization">
                 <center>
-                <img class="logo" src="images/UP AMPLI.png" height="100%">
+                <img class="logo" src="images/UP AMPLI.png">
                 <h2>UP Mindanao AMPLI</h2>
                 <p>Admin Building, UP Mindanao Campus, Oblation Circle, Mintal, Davao City, Philippines</p
                 </center>
@@ -115,9 +115,9 @@
                 <center>
                 <h2>Follow Us</h2>
                 <ul>
-                    <li><a href="https://www.facebook.com/upmindanaoampli"><img id="social-media" src="images/icons/facebook.png"></a></li>
-                    <li><a href="https://www.instagram.com/upminampli"><img id="social-media" src="images/icons/instagram.png"></a></li>
-                    <li><a href="https://www.tiktok.com/@upminampli"><img id="social-media" src="images/icons/tiktok.png"></a></li>
+                    <li><a href="https://www.facebook.com/upmindanaoampli"><img class="social-media" src="images/icons/facebook.png"></a></li>
+                    <li><a href="https://www.instagram.com/upminampli"><img class="social-media" src="images/icons/instagram.png"></a></li>
+                    <li><a href="https://www.tiktok.com/@upminampli"><img class="social-media" src="images/icons/tiktok.png"></a></li>
                 </ul>
                 </center>
             </div>
@@ -128,7 +128,6 @@
                 <p style="text-align:center;">Phone: <a href="tel:+639159343584">+639159343584</a></p>
                 </center>
             </div>
-            <p style="text-align:center; position: absolute;">THIS WEBSITE IS FOR THE FINAL PROJECT OF CMSC 3</p>
         </div>
       </footer>
     </body>
