--- a/about-us.html
+++ b/about-us.html
@@ -6,61 +6,6 @@
     <link rel="stylesheet" href="ampli-style.css">
     <link rel="icon" type="image/x-icon" href="images/favicon_io/favicon.ico">
     <title>UP AMPLI</title>
-    <style>
-    .mission{
-        list-style-type: disc;
-        padding-left: 20px; 
-        margin-left: auto; 
-        margin-right: auto;
-        width: 75%;
-        text-align: justify;
-    }
-        .officers img{
-        width: 165px;
-        height: auto;
-      }
-      h2{
-        font-size: 24px;
-      }
-      h3{
-        font-size: 16px;
-      }
-      main{
-        align-items: center;
-        text-align: center;
-        display: block;
-        margin-right: auto;
-        margin-left: auto;
-    }
-      div.officers{
-        margin: 50px;
-      }
-      .row{
-        display: flex;
-        height: 400px;
-        width: auto;
-        margin: 50px;
-        align-items: center;
-        justify-content: center;
-      }
-      .row div{
-        height: 500px;
-        width: 300px;
-        margin: 10px;
-        align-items: center;
-        align-content: center;
-      }
-      div.title{
-        display: block;
-        margin: auto;
-        align-items: center;
-        height: auto;
-        width: fit-content;
-      }
-      div.title h1{
-        margin:20px;
-      }
-    </style>
 </head>
 <body>
     <header>
@@ -107,9 +52,9 @@
                 <center>
                 <h2>Follow Us</h2>
                 <ul>
-                    <li><a href="https://www.facebook.com/upmindanaoampli"><img id="social-media" src="images/icons/facebook.png"></a></li>
-                    <li><a href="https://www.instagram.com/upminampli"><img id="social-media" src="images/icons/instagram.png"></a></li>
-                    <li><a href="https://www.tiktok.com/@upminampli"><img id="social-media" src="images/icons/tiktok.png"></a></li>
+                    <li><a href="https://www.facebook.com/upmindanaoampli"><img class="social-media" src="images/icons/facebook.png"></a></li>
+                    <li><a href="https://www.instagram.com/upminampli"><img class="social-media" src="images/icons/instagram.png"></a></li>
+                    <li><a href="https://www.tiktok.com/@upminampli"><img class="social-media" src="images/icons/tiktok.png"></a></li>
                 </ul>
                 </center>
             </div>
@@ -120,7 +65,6 @@
                 <p style="text-align:center;">Phone: <a href="tel:+639159343584">+639159343584</a></p>
                 </center>
             </div>
-            <p style="text-align:center; position: absolute;">THIS WEBSITE IS FOR THE FINAL PROJECT OF CMSC 3</p>
         </div>
       </footer>
     </body>
