--- a/applications.html
+++ b/applications.html
@@ -6,11 +6,6 @@
     <link rel="stylesheet" href="ampli-style.css">
     <link rel="icon" type="image/x-icon" href="images/favicon_io/favicon.ico">
     <title>UP AMPLI</title>
-    <style>
-        div.announcements{
-            display: flex;
-        }
-    </style>
 </head>
 <body>
     <header>
@@ -71,9 +66,9 @@
                 <center>
                 <h2>Follow Us</h2>
                 <ul>
-                    <li><a href="https://www.facebook.com/upmindanaoampli"><img id="social-media" src="images/icons/facebook.png"></a></li>
-                    <li><a href="https://www.instagram.com/upminampli"><img id="social-media" src="images/icons/instagram.png"></a></li>
-                    <li><a href="https://www.tiktok.com/@upminampli"><img id="social-media" src="images/icons/tiktok.png"></a></li>
+                    <li><a href="https://www.facebook.com/upmindanaoampli"><img class="social-media" src="images/icons/facebook.png"></a></li>
+                    <li><a href="https://www.instagram.com/upminampli"><img class="social-media" src="images/icons/instagram.png"></a></li>
+                    <li><a href="https://www.tiktok.com/@upminampli"><img class="social-media" src="images/icons/tiktok.png"></a></li>
                 </ul>
                 </center>
             </div>
@@ -84,7 +79,6 @@
                 <p style="text-align:center;">Phone: <a href="tel:+639159343584">+639159343584</a></p>
                 </center>
             </div>
-            <p style="text-align:center; position: absolute;">THIS WEBSITE IS FOR THE FINAL PROJECT OF CMSC 3</p>
         </div>
       </footer>
     </body>
